--- a/wallet/pom.xml
+++ b/wallet/pom.xml
@@ -169,6 +169,33 @@
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jarsigner-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>signing</id>
+						<goals>
+							<goal>sign</goal>
+							<goal>verify</goal>
+						</goals>
+						<phase>package</phase>
+						<inherited>true</inherited>
+						<configuration>
+							<removeExistingSignatures>true</removeExistingSignatures>
+							<archiveDirectory/>
+							<includes>
+								<include>${project.build.directory}/${project.artifactId}.apk</include>
+							</includes>
+							<keystore>/home/andrea/Vinna/KeyStore/tutor-web-key.keystore</keystore>
+							<alias>tutor-web</alias>
+							<storepass>TW_gstefans</storepass>
+							<keypass>TW_gstefans</keypass>
+							<verbose>true</verbose>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
 					<source>1.6</source>
