Update to 1.9: Fixed bug with box.tutor-web redirect

--- a/wallet/pom.xml
+++ b/wallet/pom.xml
@@ -6,7 +6,7 @@
 
 	<artifactId>wallet</artifactId>
 	<packaging>apk</packaging>
-	<version>1.8</version>
+	<version>1.9</version>
 	<name>Smileycoin Wallet</name>
 
 
@@ -167,7 +167,7 @@
 			</testResource>
 		</testResources>
 		<plugins>
-			<!--<plugin>
+			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jarsigner-plugin</artifactId>
 				<executions>
@@ -193,7 +193,7 @@
 						</configuration>
 					</execution>
 				</executions>
-			</plugin>-->
+			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
